--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "spotify-web-api-node": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
